--- a/project.properties
+++ b/project.properties
@@ -13,11 +13,10 @@
 # Indicates whether an apk should be generated for each density.
 split.density=false
 # Project target.
-target=android-19
-android.library.reference.1=../../facebook-android-sdk-3.5.2/facebook
-android.library.reference.3=../../adt-bundle-linux-x86_64-20131030/sdk/extras/android/support/v7/mediarouter
-android.library.reference.2=../../adt-bundle-linux-x86_64-20131030/sdk/extras/android/support/v7/appcompat
-android.library.reference.4=../../gcast/GoogleCastSdkAndroid
-android.library.reference.5=../../adt-bundle-linux-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.6=../../VitamioBundle/vitamio
-android.library.reference.7=../../firefly_cast
+target=android-18
+android.library.reference.1=../adt-bundle-linux-x86_64-20140702/sdk/extras/android/support/v7/appcompat
+android.library.reference.3=../adt-bundle-linux-x86_64-20140702/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.2=../adt-bundle-linux-x86_64-20140702/sdk/extras/android/support/v7/mediarouter
+android.library.reference.4=../LIBS/facebook-android-sdk/facebook
+android.library.reference.5=../LIBS/VitamioBundle/vitamio
+android.library.reference.6=../fling-sdk/fling_sdk_android
