--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,9 +52,9 @@
 <!-- package="tv.flipr.lycheetv" -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="tv.flipr.lycheetv"
-      android:versionCode="146"
-      android:versionName="5.0.1.146">
+      package="tv.tv9x9.player"
+      android:versionCode="147"
+      android:versionName="5.0.1.147">
           
     <!-- Instructions
     	The build for CTS version is very fragile:
